2021-05-24  David Turner  <david@freetype.org>

	[build] Add Meson build files and documentation.

	This commit adds files necessary to build the demo programs,
	including `ftinspect`, with the Meson build system.

	* meson.build, graph/meson.build, src/ftinspect/meson.build: New
	build files for Meson.
	* subprojects/freetype2.wrap, subprojects/libpng.wrap,
	subprojects/zlib.wrap: New subproject files for Meson.
	* README.meson: New file.
	* README, .gitignore: Updated.

2021-05-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* Makefile (LINK_LIBS): Add `-lgdiplus' for PNG saving on Windows.

	Reported by Anuj Verma.

2021-04-30  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftdump.c (Print_Charmaps): Add hexadecimal FNT charset.

2021-04-30  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftdump.c (Print_Charmaps): Add PCF/BDF/FNT charset info.

2021-04-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/rules.mk: Warn about missing graphics driver.

2021-03-30  orbea  <orbea@riseup.net>

	[build] Add an `install` target for binaries and man pages.

	* Makefile (MANPAGES): New variable.
	(install) <unix>: New target.

2021-03-26  Werner Lemberg  <wl@gnu.org>

	* man/ftbench.1, man/ftview.1: Improve line breaking.

2021-03-24  orbea  <orbea@riseup.net>

	* Makefile, mac/Makefile (LINK_CMD): Don't hard-code `libtool`.

2021-03-24  orbea  <orbea@riseup.net>

	[graph] Fix build with `slibtool`.

	* graph/rules.mk (GRAPH_LIB): Handle the case specially where
	`LIBTOOL` is defined.
	(COMPILE_GRAPH_LIB) <LIBTOOL>: Enable use of `dlopen`.

2021-03-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftbench] Add Windows performance timers.

	* src/ftbench.c (get_time) [_WIN32]: Add QPC, GPT, and QPCT timing
	tools.
	(main) [_WIN32]: Initialize interval for QPC.

2021-02-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/x11] Gray multiplication tricks.

	* graph/x11/grx11.c (gr_x11_convert_gray_to_rgb{555,565,0888,8880}):